# TekoFramework

./: .gitignore  CMakeLists.txt  README.md  meson.build
asset/: AssetInfo.xml
include/: Assets.hpp  Exceptions.hpp  GameBase.hpp  Log.hpp  Reg.hpp
include/World/: Camera.hpp  Entity.hpp  EntityComponent.hpp  World.hpp  WorldSurface.hpp
src/: AssetFuncs.cpp  AssetFuncs.hpp  Assets.cpp  CMakeLists.txt  Camera.cpp  Entity.cpp  Exceptions.cpp  GameBase.cpp  Log.cpp  Reg.cpp  World.cpp  WorldSurface.cpp  meson.build
test/: CMakeLists.txt  TestComponent.cpp  TestComponent.hpp  main.cpp  meson.build
